# trojan-plus

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTORS.md  Dockerfile  GEMINI.md  README.md  TODO_QUIC_TESTS.md  azure-pipelines.yml  badvpn  build_and_test.bat  build_and_test.sh  build_and_test_docker_linux.sh  build_android_so.sh  make_android.sh  make_ios.sh  make_macos.sh  make_macos_lib.sh  make_xcframework.sh  make_xcframework_ios.sh  make_xcframework_macos.sh  make_xcframework_macos_lib.sh  quic_fallback_fix.md  quicupstreamhandler-quicupstreamhandler-peppy-kahn.md  trojan-plus-ios-libs-README.md
docs/: build.md  config.md
examples/: client.json-example  client_tun.json-example  forward.json-example  nat.json-example  server.json-example  trojan.service-example
mimalloc/src/: arena.c
mimalloc/src/prim/unix/: prim.c
quic_proxy_test/: client.json  http1_server.py  selfsigned.crt  selfsigned.key  server.json  start_client.bat  start_client.sh  start_http1.sh  start_server.bat  start_server.sh
scripts/: Dockerfile  build_docker.sh  compile_and_test.sh  push_to_docker_hub.sh
src/: main.cpp  platform_exports.cpp  platform_exports.h
src/core/: authenticator.cpp  authenticator.h  config.cpp  config.h  icmpd.cpp  icmpd.h  log.cpp  log.h  pipeline.cpp  pipeline.h  service.cpp  service.h  utils.cpp  utils.h  version.cpp  version.h
src/mem/: memallocator.cpp  memallocator.h
src/proto/: dns_header.cpp  dns_header.h  icmp_header.h  ipv4_header.h  ipv6_header.h  pipelinerequest.cpp  pipelinerequest.h  socks5address.cpp  socks5address.h  trojanrequest.cpp  trojanrequest.h  udppacket.cpp  udppacket.h
src/quic/: outbound_transport.cpp  outbound_transport.h  quic_client_endpoint.cpp  quic_client_endpoint.h  quic_connection.cpp  quic_connection.h  quic_endpoint.cpp  quic_endpoint.h  quic_http1_upstream_conn.cpp  quic_http1_upstream_conn.h  quic_server_endpoint.cpp  quic_server_endpoint.h  quic_session.cpp  quic_session.h  quic_session_upstream.cpp  quic_session_upstream.h  quic_stream_handler.h  quic_tls_ctx.cpp  quic_tls_ctx.h  quic_to_http3_connect.cpp  quic_to_http3_connect.h
src/quic/h1_upstream/: quic_http1_upstream_conn.cpp  quic_http1_upstream_conn.h  quic_session_upstream.cpp  quic_session_upstream.h  quic_to_http3_connect.cpp  quic_to_http3_connect.h
src/session/: clientsession.cpp  clientsession.h  forwardsession.cpp  forwardsession.h  natsession.cpp  natsession.h  pipelinecomponent.cpp  pipelinecomponent.h  pipelinesession.cpp  pipelinesession.h  serversession.cpp  serversession.h  session.cpp  session.h  socketsession.cpp  socketsession.h  udpforwardsession.cpp  udpforwardsession.h
src/ssl/: ssldefaults.cpp  sslsession.cpp  sslsession.h
src/tun/: dnsserver.cpp  dnsserver.h  lwip_tcp_client.cpp  lwip_tcp_client.h  tundev.cpp  tundev.h  tunlocalsession.cpp  tunlocalsession.h  tunproxysession.cpp  tunproxysession.h  tunsession.cpp  tunsession.h  udplocalforwarder.cpp  udplocalforwarder.h
src/tun/lwip_custom/: lwipopts.h  sys.c
src/tun/lwip_custom/arch/: cc.h
tests/: .gitignore
tests/LinuxFullTest/: fulltest_client.py  fulltest_dns.py  fulltest_fallback.py  fulltest_fallback_mock.py  fulltest_gen_content.py  fulltest_main.py  fulltest_quic.py  fulltest_quic_h1mock.py  fulltest_quic_h3mock.py  fulltest_server.py  fulltest_udp_proto.py  fulltest_utils.py  quic_t15_aioquic_client.py  quic_t16_aioquic_client.py  quic_t4_aioquic_client.py
tests/LinuxFullTest/config/: client_config.json  client_config_pipeline.json  client_config_pipeline_balance.json  fallback_server_config.json  gfwlist_domain.txt  proxy_ips.txt  quic_client_config.json  quic_server_config.json  server.crt  server.key  server_config.json  server_config_pipeline.json  server_config_pipeline_balance.json  white_ips.txt
